# Australia-Fire-Sim

./: .gitignore  CHANGELOG.md  Cargo.toml  FIRE_DYNAMICS_VALIDATION.md  FIRE_SPREAD_FIX.md  IMPLEMENTATION_SUMMARY.md  MENU_REFACTORING_SUMMARY.md  MIGRATION_STATUS.md  OPTIMIZATION_REPORT.md  PERFORMANCE.md  PHASE2_COMPLETION_GUIDE.md  PHASE2_STATUS.md  PRECISION_RATIONALE.md  PR_SUMMARY.md  README.md  STATE_TRANSITION_DIAGRAM.md  TASK_UPDATE_DEMO_INTERACTIVE.md  TESTING_MENU_FIX.md  UNIT_TYPE_IMPROVEMENTS.md  libtest_cast2.rlib
.github/: PHASE_IMPLEMENTATION_PROMPT.md  PHASE_IMPLEMENTATION_PROMPT_CLOUD.md  PHASE_IMPLEMENTATION_PROMPT_LOCAL.md  copilot-instructions.md
.github/agent-tasks/: FIRE_PHYSICS_ADVANCED.md  FIRE_PHYSICS_ENHANCEMENTS.md  GPU_FIRE_FRONT_IMPLEMENTATION_TASK.md  REALISTIC_GPU_FIRE_FRONT_SYSTEM.md  WEATHER_FIRE_ATMOSPHERE_COUPLING.md
.github/agent_tasks/: migrate_f32_to_appropriate_types.md
.github/workflows/: copilot-setup-steps.yml  tests.yml
crates/core/: Cargo.toml
crates/core/src/: australian.rs  element.rs  ember.rs  fuel.rs  lib.rs  physics.rs  pyrocumulonimbus.rs  simulation.rs  spatial.rs  weather.rs
crates/core/src/atmosphere/: convection.rs  downdraft.rs  fire_whirl.rs  instability.rs  mod.rs  pyrocb.rs
crates/core/src/core_types/: atmospheric.rs  element.rs  ember.rs  fuel.rs  mod.rs  noise.rs  spatial.rs  units.rs  vec3.rs  weather.rs
crates/core/src/gpu/: arrival_time.rs  context.rs  level_set.rs  level_set_compute.wgsl  mod.rs  profiler.rs  rothermel.rs  rothermel_compute.wgsl  suppression.rs  visual_export.rs
crates/core/src/grid/: element_grid_coupling.rs  fuel_loader.rs  mod.rs  simulation_grid.rs  terrain.rs  wind_field.rs
crates/core/src/legacy/: australian.rs  legacy_physics.rs  mod.rs  pyrocumulonimbus.rs  simulation.rs
crates/core/src/physics/: albini_spotting.rs  canopy_layers.rs  combustion_physics.rs  crown_fire.rs  element_heat_transfer.rs  fuel_moisture.rs  mod.rs  rothermel.rs  smoldering.rs  suppression_physics.rs  terrain_physics.rs
crates/core/src/simulation/: action_queue.rs  assets.rs  difficulty.rs  field_simulation.rs  mod.rs  network.rs  persistence.rs  replay.rs
crates/core/src/solver/: combustion.rs  context.rs  cpu.rs  crown_fire.rs  fields.rs  fuel_grid.rs  fuel_layers.rs  fuel_variation.rs  gpu.rs  heat_transfer.rs  junction_zone.rs  level_set.rs  marching_squares.rs  mod.rs  noise.rs  profiler.rs  quality.rs  regime.rs  terrain_slope.rs  trait.rs  valley_channeling.rs  vertical_heat_transfer.rs  vls.rs
crates/core/src/solver/shaders/: advanced_physics.wgsl  atmosphere_reduce.wgsl  combustion.wgsl  crown_fire.wgsl  fuel_layers.wgsl  heat_transfer.wgsl  ignition_sync.wgsl  level_set.wgsl  reinitialize.wgsl
crates/core/src/suppression/: agent.rs  coverage.rs  mod.rs
crates/core/src/ultra/: mod.rs  simulation_ultra.rs
crates/core/src/weather/: atmosphere.rs  mod.rs  pyrocumulus.rs
crates/core/tests/: australian_bushfire_validation.rs  gpu_determinism.rs  integration_fire_behavior.rs  physics_validation_extended.rs  weather_preset_basic.rs  windfield_reconfigure.rs
crates/ffi/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
crates/ffi/src/: error.rs  field_queries.rs  field_simulation.rs  helpers.rs  instance.rs  lib.rs  queries.rs  simulation.rs  terrain.rs
demo-bevy/: Cargo.toml  QUICK_START.md  README.md  UI_LAYOUT.md  VISUAL_MOCKUP.md
demo-bevy/src/: main.rs
demo-gui/: BEVY_17_MIGRATION_PLAN.md  BEVY_UPGRADE.md  CUSTOMIZATION.md  Cargo.toml  README.md  TERRAIN.md  TODO_MENU_FPS.md  UI_FEATURES.md  USAGE.md
demo-gui/src/: main.rs  main_v17.rs
demo-headless/: Cargo.toml
demo-headless/examples/: scientific_validation.rs  test_spread.rs
demo-headless/src/: main.rs  ultra_demo.rs
demo-interactive/: Cargo.toml  README.md  UI_DEMO.md
demo-interactive/src/: main.rs  main_old.rs
docs/: CITATIONS.bib  IMPLEMENTATION_PLAN.md  SCIENTIFIC_VALIDATION.md  demo-usage.md  direct_suppression_example.md  large-map-profile-analysis.md  large-scale-realism-validation.md  optimization-summary.md  performance-metrics.md  profile-analysis-with-symbols.md  profile-analysis.md  research-validation.md  ultra-simulation-implementation.md  unreal-engine-integration.md
docs/integration/: ATMOSPHERIC_TURBULENCE_ENHANCEMENT.md  HEAT_APPLICATION_GUIDE.md  godot-integration.md  unreal-engine-integration.md
docs/research/: COMPREHENSIVE_BUSHFIRE_BEHAVIORS_CATALOG.md  bushfire_science_data.md  historical_fires_dataset.md  weather_systems_data.md
docs/validation/: AUSTRALIAN_BUSHFIRE_VALIDATION_FINDINGS.md  GPT_FUTURE_ENHANCEMENTS_PHASE_PLAN.md  GPT_FUTURE_ENHANCEMENTS_PHASE_PLAN_GAME_ENGINE_HANDLING.md  IMPLEMENTATION_PLAN.md  VALIDATION_COMPLETE.md  albini_spotting_code_validation.md  calibration_recommendations.md  cross_validation_dataset.md  crown_fire_code_validation.md  ffdi_code_validation.md  fuel_moisture_code_validation.md  gpu_determinism.md  gpu_fire_system.md  operational_limits.md  phase2_validation_summary.md  rothermel_code_validation.md  sensitivity_analysis.md  statistical_validation.md  stefan_boltzmann_code_validation.md  uncertainty_analysis.md
scripts/: analyze_profile.py  test_spread_rate.sh
