[workspace]
members = ["crates/core", "crates/ffi", "demo-headless", "demo-bevy"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fire Sim Team"]
license = "MIT"

[workspace.dependencies]
rayon = "1.8"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
rust-sdl2 = { version = "0.34", features = ["image"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
