[workspace]
members = ["crates/core", "crates/ffi", "demo-headless", "demo-gui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fire Sim Team"]
license = "MIT"

[workspace.dependencies]
rayon = "1.11"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
