[package]
name = "demo-headless"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "demo-headless"
path = "src/main.rs"

[[bin]]
name = "ultra-demo"
path = "src/ultra_demo.rs"

[dependencies]
fire-sim-core = { path = "../crates/core" }
nalgebra.workspace = true
clap = { version = "4.4", features = ["derive"] }
