[package]
name = "demo-interactive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "demo-interactive"
path = "src/main.rs"

[dependencies]
fire-sim-core = { path = "../crates/core" }
nalgebra.workspace = true
ratatui = "0.28"
crossterm = "0.29"
