[package]
name = "fire-sim-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rayon.workspace = true
nalgebra.workspace = true
rand.workspace = true
serde.workspace = true
rustc-hash.workspace = true
tracing = "0.1.44"

[dev-dependencies]
approx = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctor = "0.1"
