[package]
name = "fire-sim-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["gpu"]
gpu = ["fire-sim-core/gpu"]

[dependencies]
fire-sim-core = { path = "../core", default-features = false }

[build-dependencies]
cbindgen = "0.29"

[lib]
crate-type = ["cdylib", "staticlib"]
